fixed z-index

--- a/source/c/common.css
+++ b/source/c/common.css
@@ -657,6 +657,7 @@ nav ul li {
 }
 nav .dropList {
 	position:absolute;
+    z-index: 10;/*保证在广告层上*/
 	left:0px;
 	top:28px;
 	line-height:30px;
@@ -957,5 +958,5 @@ img.lazy{
 .adposter_pos{
     position: absolute;
     left: -10000px;
-    z-index: 99;/*防止定位容器的z-index影响*/
+    z-index: 9;/*防止定位容器的z-index影响*/
 }
